# libqbz2

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  PROCESS.md
.claude/: settings.json
.claude/agents/: coordinator.md  journalist.md  strategic-tester.md  tester.md  worker.md
bench/: bench.c
fuzz/: .gitignore  CMakeLists.txt  bzip2.dict  coverage_byte_driver.c  coverage_bzopen_driver.c  coverage_driver.c  coverage_fault_inject.c  coverage_malloc_inject_driver.c  fuzz_bufftobuff.c  fuzz_compress.c  fuzz_decompress.c  fuzz_diff_streaming.c  fuzz_differential.c  fuzz_fileio.c  fuzz_streaming.c  generate-corpus.sh  malloc_inject.c  oom_inject.c  quick-fuzz-list.txt  run-quick-fuzz.sh
include/: bzlib.h
logs/: project-feed.md
process/: inject-rules-idle.sh
requirements/: REQUIREMENTS.md
scripts/: pgo-build.sh
src/: blocksort.c  bzlib.c  compress.c  crc32_pclmul.c  crctable.c  decompress.c  huffman.c  qbz2_internal.h  randtable.c
test-results/: bug-huffman-decode-oob-8513bc3.md  coverage-04b3ae.md  coverage-4afaf9.md  coverage-617fb3.md  coverage-76996f.md  coverage-7a7341d.md  coverage-981dd0.md  coverage-a6a84d.md  coverage-ab9b0b9.md  coverage-c50993d.md  coverage-f50bd8f.md  diff-fuzz-campaign-76996f.md  fuzz-campaign-02c375.md  fuzz-campaign-0bd244.md  fuzz-campaign-329da9d.md  fuzz-campaign-46ebafb.md  fuzz-campaign-4afaf9.md  fuzz-campaign-76996f.md  fuzz-campaign-8513bc3.md  fuzz-campaign-981dd0.md  fuzz-campaign-981dd00.md  fuzz-campaign-b6f97e2.md  fuzz-campaign-c50993d.md  fuzz-campaign-e6a09d5.md  fuzz-campaign-ea4270b.md  fuzz-campaign-ea8cffa.md  fuzz-campaign-f50bd8f.md  fuzz-campaign-f56cb57.md  profile-c50993.md  safety-audit-f50bd8f.md  validation-02c375.md  validation-0326d2.md  validation-0bd244.md  validation-1f048d.md  validation-24059a.md  validation-2a855f.md  validation-329da9.md  validation-43755b.md  validation-46ebaf.md  validation-554416.md  (+23 more)
test-results/crash-reproducers/: huffman-overflow-primary.bz2  huffman-overflow-subtable.bz2
tests/: test_advanced.c  test_api.c  test_block_boundary_bitreader.c  test_blocksort_branches.c  test_blocksort_paths.c  test_bufftobuff_edge.c  test_bzip2_corpus.c  test_bzlib_branches.c  test_compress_branches.c  test_compress_states.c  test_concat_readahead.c  test_coverage_gaps.c  test_coverage_gaps2.c  test_coverage_gaps3.c  test_coverage_gaps4.c  test_crc32_internal.c  test_decompress_branches.c  test_decompress_crc.c  test_decompress_errors.c  test_diff_error_codes.c  test_diff_multiblock.c  test_differential.c  test_edge_cases.c  test_error_paths.c  test_fileio.c  test_framework.h  test_huffman_decode_oob.c  test_malformed.c  test_multiblock.c  test_oom.c  test_param_combos.c  test_randomised_blocks.c  test_rle_huffman_edge.c  test_roundtrip.c  test_streaming.c  test_streaming_edge.c  test_streaming_states.c
tools/: pgo_training.c
